# Litintel

./: .gitignore  CHANGELOG.md  DETAILS.md  README.md  README_LITINTEL.md  literature_flow.py  pyproject.toml  requirements.txt  requirements_litintel.txt  test_relevance_fix.py
.deployment/: PREFECT_CLOUD_SETUP.md  README.md  SCHEDULING_OPTIONS.md  biweekly_flow.py  deploy_scheduled.py
agent/: agent.py  cli.py
configs/: controlled_vocab.yaml  tier1_pca.yaml  tier2_methods.yaml
docs/: AI tools pipline - Escalation Logic Revi.md  escalation_logic.md  google_drive_setup.md
modules/: config.py  drive_tasks.py  drive_utils.py  enrichment.py  notion_utils.py  prompts.py  pubmed_tasks.py  validation_tasks.py
old_script/: enrichment.py
scripts/: backfill_rag_corpus.py  backfill_rag_from_notion.py  check_relevance_scores.py  create_rag_corpus.py  dump_pmc_xml.py  generate_twopass_inputs.py  verify_drive_export.py  verify_drive_setup.py  verify_pagination.py  verify_structure.py
src/literature_intel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/litintel/: __init__.py  cli.py  config.py  parsing.py
src/litintel/enrich/: ai_client.py  escalation_heuristics.py  prompt_templates.py  schema.py
src/litintel/pipeline/: shared.py  tier1.py  tier2.py
src/litintel/pubmed/: client.py
src/litintel/storage/: drive.py  notion.py  rag_corpus.py
src/litintel/utils/: __init__.py  run_log.py  vocab.py
tests/: conftest.py  test_discovery_modes.py  test_enrichment.py  test_integration.py  test_litintel_ai_client.py  test_rag_corpus.py  test_schema_validation.py  test_vertex_auth.py  test_vocab_normalization.py
