[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "literature-intel"
version = "0.1.0"
description = "Production-grade literature intelligence pipeline for computational oncology"
readme = "README.md"
authors = [{ name = "Antigravity", email = "agent@deepmind.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "prefect>=2.0.0",
    "google-generativeai",
    "openai",
    "notion-client",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "biopython",
    "pandas",
    "pyyaml",
    "typer",
    "rich",
    "pydantic>=2.0.0"
]
requires-python = ">=3.9"

[project.scripts]
litintel = "litintel.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
